# lucent

./: .gitignore  LICENSE  Makefile  README.md  RELEASING.md  codebase-review.md  index.html  package-lock.json  package.json  screenshot.html  vite.config.ts  vitest.config.ts  web.html
docs/: 99-kitchen-sink.html  copy-and-export.md
examples/: 01-basics.md  02-links.md  03-task-lists.md  04-math.md  05-mermaid.md  06-footnotes.md  07-emoji.md  08-definition-lists.md  09-callouts.md  10-code-highlighting.md  99-kitchen-sink.md  README.md  bad.yaml  data-sample.ini  data-sample.json  data-sample.toml  data-sample.yaml  log-entry.json
homebrew/: lucent.rb
src/: clipboard.ts  editor.ts  export-drawio.ts  export-excalidraw.ts  export.ts  format.ts  highlight-loader.ts  highlight.ts  icons.ts  main-screenshot.ts  main-tauri.ts  main-web.ts  main.ts  md-plugins.d.ts  mermaid-export.ts  mermaid-whiteboard.ts  render-core.ts  render-worker.ts  render.ts  settings.ts  stdin.ts  styles.css  tabs.ts  types.ts  viewer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  logindex.rs  main.rs  pdf.rs  stdin.rs  watcher.rs
test/: clipboard.test.ts  data-parse.test.ts  dom-provider.test.ts  embedded-json.test.ts  export-drawio.test.ts  export-excalidraw.test.ts  export.test.ts  format.test.ts  highlight.test.ts  icons.test.ts  log-level.test.ts  log-provider.test.ts  log-search.test.ts  log-view.test.ts  markdown-renderer.test.ts  mermaid-whiteboard.test.ts  tabs.test.ts  (+12 more)
(+34 files in other folders)
